# koin

./: LICENSE  manage.py  pyproject.toml
apps/folio/: admin.py  alphavantage.py  apps.py  charts.py  models.py  signals.py  urls.py  views.py
apps/folio/tests/: test_models.py
koin/: asgi.py  settings.py  urls.py  utils.py  wsgi.py
templates/: base.html  folio.html  logs.html
